--- a/frontend/src/view/core/footer/footer.scss
+++ b/frontend/src/view/core/footer/footer.scss
@@ -1,6 +1,6 @@
 .site-footer {
     background-color: #ffe4d4;
-    padding: 45px 0 20px;
+    padding: 45px 0px 10px 30px;
     font-size: 15px;
     line-height: 24px;
     color: #040505;
